build(server): Add docker-compose file
Docker-compose file builds network with backend(PesterChum server) and
database(mysql).

--- a/UNIX_Server/CMakeLists.txt
+++ b/UNIX_Server/CMakeLists.txt
@@ -7,16 +7,13 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 # directories of sources and headers
-include_directories(${PROJECT_SOURCE_DIR}/DataBase)
+include_directories(${PROJECT_SOURCE_DIR}/DataBase /usr/include
+                    /usr/include/cppconn)
 
-# including libraries
-find_package(MySQLcppconn REQUIRED)
-
-set(SOURCES main.cpp server.cpp DataBase/ChatDatabase.cpp server.h
-            DataBase/ChatDatabase.h)
+set(SOURCES main.cpp server.cpp DataBase/ChatDatabase.cpp)
 
 # creating an executable file
 add_executable(PesterServer ${SOURCES})
 
 # linking libraries
-target_link_libraries(PesterServer mysqlcppconn)
+target_link_libraries(PesterServer PRIVATE mysqlcppconn)
